[package]
name = "udp-wiremock"
version = "0.0.1"
edition = "2024"

[dependencies]
# Serialization
serde = { version = "1.0.228", features = ["derive"] }
postcard = { version = "1.1.3", features = ["alloc"] }

# Async 
futures = "0.3.32"
async-drop = "0.1.2"
tokio = { version = "1.47.1", features = [
    "macros",
    "sync",
    "net",
    "rt-multi-thread",
    "time",
] }

# Utils
thiserror = "2.0.18"
log = "0.4.29"


[dev-dependencies]
