[package]
name = "udp-wiremock"
version = "0.1.0"
edition = "2024"
authors = ["fpena2 <fpena2@unh.newhaven.edu>"]
repository = "https://github.com/fpena2/udp-wiremock"
description = "backbox testing functions with UDP outputs"
readme = "README.md"
keywords = ["UDP", "testing"]
categories = ["development-tools::testing", "network-programming"]
license = "MIT"


[dependencies]
# Serialization
serde = { version = "1.0.228", features = ["derive"] }
postcard = { version = "1.1.3", features = ["alloc"] }

# Async 
async-drop = "0.1.2"
tokio = { version = "1.47.1", features = [
    "macros",
    "sync",
    "net",
    "rt-multi-thread",
    "time",
] }

# Utils
thiserror = "2.0.18"
log = "0.4.29"


[dev-dependencies]
